--- a/pom.xml
+++ b/pom.xml
@@ -169,10 +169,10 @@
          <version>4.0</version>
       </dependency>
       <dependency>
-         <groupId>c3p0</groupId>
-         <artifactId>c3p0</artifactId>
-         <version>0.9.1.2</version>
-      </dependency>
+    	 <groupId>com.mchange</groupId>
+    	 <artifactId>c3p0</artifactId>
+    	 <version>0.9.5.2</version>
+	  </dependency>
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
